# irispy-lmsal

./: .codecov.yaml  .coveragerc  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  .rtd-environment.yml  CHANGELOG.rst  CODE_OF_CONDUCT.md  LICENSE.rst  MANIFEST.in  README.rst  pyproject.toml  pytest.ini  readthedocs.yml  ruff.toml  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yml  codeflash.yaml  update.yml
changelog/: 41.breaking.1.rst  41.breaking.rst  63.breaking.1.rst  63.breaking.rst  63.feature.rst  64.feature.rst  65.breaking.rst  69.bugfix.1.rst  69.bugfix.2.rst  69.bugfix.rst  69.feature.rst  70.feature.rst  74.breaking.1.rst  74.breaking.rst  81.breaking.1.rst  81.breaking.rst  85.breaking.rst  README.rst
docs/: changelog.rst  conf.py  contributing.rst  getting_help.rst  guide.rst  history.rst  index.rst  installation.rst  introduction.rst  known_issues.rst
docs/code_api/: index.rst  iripsy.rst  sji.rst  spectrograph.rst  utils.rst
docs/code_ref/: index.rst  sji.rst  spectrograph.rst  utils.rst
docs/reference/: index.rst  io.rst  irispy.rst  sji.rst  spectrograph.rst  utils.rst
examples/: README.txt  align_iris_aia.py  align_iris_aia_rolled.py  coalign_iris_aia.py  cropping_iris.py  mg_ii_dopplergrams.py  overview.py  plotting_spectra.py  radiometric_calibration.py  raster.py  reproject_iris_roll_aia.py  skip_umbral_flashes.py  south_sji.py  spectral_fitting.py  timeseries_analysis.py  umbral_flashes.py  using_aia_cubes.py  v34_rasters.py  working_with_rasters.py
irispy/: __init__.py  conftest.py  meta.py  obsid.py  sji.py  spectrograph.py  version.py  visualization.py
irispy/data/: README.rst  __init__.py  _sample.py  iris_sra_c_20191101.geny  iris_sra_c_20200223.geny  iris_sra_c_20231106.geny  sample.py  v34-table2000.csv  v36-table2000.csv  v38-table10.csv  v38-table2000.csv  v40-table2000.csv
irispy/data/test/: __init__.py  cali.pro  compress.py  fit_iris_xput_input.sav  fit_iris_xput_output.sav  idl_iris_get_response_20130903_new_version003.sav  idl_iris_get_response_20130903_new_version004.sav  idl_iris_get_response_20130903_new_version005.sav  idl_iris_get_response_20130903_new_version006.sav  input_calibration.sav  iris_datacal.sav  iris_l2_20170502_052551_3893010094_SJI_1330_t000.fits  iris_l2_20170502_052551_3893010094_SJI_1400_t000.fits  iris_l2_20170502_052551_3893010094_SJI_2796_t000.fits  iris_l2_20170502_052551_3893010094_SJI_2832_t000.fits  iris_l2_20210905_001833_3620258102_SJI_1330_t000.fits  iris_l2_20210905_001833_3620258102_SJI_1330_t000_test.fits  iris_l2_20210905_001833_3620258102_SJI_1400_t000.fits  iris_l2_20210905_001833_3620258102_SJI_1400_t000_test.fits  iris_l2_20210905_001833_3620258102_SJI_2796_t000.fits  iris_l2_20210905_001833_3620258102_SJI_2796_t000_test.fits  iris_l2_20210905_001833_3620258102_SJI_2832_t000.fits  iris_l2_20210905_001833_3620258102_SJI_2832_t000_test.fits  iris_response_2025_08_05T22_25_04_723.sav  output_calibration.sav  output_factor.sav  test_response.sav
irispy/io/: __init__.py  sji.py  sp.py  spectrograph.py  utils.py
irispy/io/tests/: test_io.py  test_sji.py  test_spectrograph.py  test_utils.py
irispy/tests/: figure_hashes_mpl_3105_ft_261_astropy_710.json  helpers.py  test_figure.py  test_obsid.py  test_sji.py  test_sji_fake_data.py  test_sji_fd.py  test_spectrograph.py
irispy/tests/io/: test_utils.py
irispy/tests/utils/: test_spectrograph.py  test_wobble.py
irispy/utils/: __init__.py  constants.py  response.py  spectrograph.py  utils.py  wobble.py
irispy/utils/tests/: test_response.py  test_spectrograph.py  test_utils.py  test_wobble.py
licenses/: README.rst
