[build-system]
requires = [
  "setuptools",
  "setuptools_scm[toml]",
  "wheel",
  "oldest-supported-numpy",
]
build-backend = 'setuptools.build_meta'

[project]
name = "irispy-lmsal"
dynamic = ["version"]
description = "Provides tools to read and analyze data from the IRIS solar-observing satellite."
readme = "README.rst"
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}
keywords = ["solar physics", "solar", "science", "NASA", "iris", "spectra", "lmsal"]
authors = [
  {email = "nabil.freij@gmail.com"},
  {name = "Nabil Freij"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  'dkist>=1.0.0',
  'ndcube>=2.3.0rc1',
  'pandas>=1.3.3',
  'scipy>=1.7.0',
  'sunpy>=6.1.0rc1',
  'sunraster>=0.4.0',
]

[project.urls]
changelog = "https://irispy-lmsal.readthedocs.io/en/stable/changelog"
documentation = "https://irispy-lmsal.readthedocs.io/en/stable/"
homepage = "https://iris.lmsal.com/"
issue_tracker = "https://github.com/LM-SAL/irispy-lmsal/issues"
repository = "https://github.com/LM-SAL/irispy-lmsal"

[project.optional-dependencies]
all = ["irispy-lmsal"]
tests = [
  "irispy-lmsal[all]",
  'pytest-astropy',
]
docs = [
  "irispy-lmsal[all]",
  'aiapy',
  'pooch',
  'dask[distributed]',
  'sphinx',
  'sphinx-automodapi',
  'sphinx-changelog',
  'sphinx-copybutton',
  'sphinx-design',
  'sphinx-gallery',
  'sphinx-hoverxref',
  'sunpy-sphinx-theme',
]
dev = ["irispy-lmsal[tests,docs]"]

[tool.setuptools_scm]
write_to = "irispy/_version.py"

[tool.setuptools]
include-package-data = true
platforms = ["any"]
provides = ["irispy"]
license-files = ["LICENSE.rst"]

[tool.setuptools.packages.find]
exclude = ["irispy._dev"]
namespaces = false

[tool.codespell]
skip = "*.asdf,*.fits,*.fts,*.header,*.json,*.xsh,*cache*,*egg*,*extern*,.git,.idea,.tox,_build,*truncated,*.svg,.asv_env,.history"
ignore-words-list = "sav,"

[tool.towncrier]
    package = "irispy-lmsal"
    filename = "CHANGELOG.rst"
    directory = "changelog/"
    issue_format = "`#{issue} <https://github.com/LM-SAL/irispy-lmsal/pull/{issue}>`__"
    title_format = "{version} ({project_date})"

    [[tool.towncrier.type]]
        directory = "breaking"
        name = "Breaking Changes"
        showcontent = true

    [[tool.towncrier.type]]
      directory = "deprecation"
      name = "Deprecations"
      showcontent = true

    [[tool.towncrier.type]]
      directory = "removal"
      name = "Removals"
      showcontent = true

    [[tool.towncrier.type]]
      directory = "feature"
      name = "New Features"
      showcontent = true

    [[tool.towncrier.type]]
      directory = "bugfix"
      name = "Bug Fixes"
      showcontent = true

    [[tool.towncrier.type]]
      directory = "doc"
      name = "Documentation"
      showcontent = true

    [[tool.towncrier.type]]
      directory = "trivial"
      name = "Internal Changes"
      showcontent = true
