[metadata]
name = irispy-lmsal
author = IRIS Instrument Team
author_email = freij@baeri.org
license = BSD 3-Clause
license_file = LICENSE.rst
url = https://gitlab.com/LMSAL_HUB/iris_hub/irispy-lmsal
description = Provides tools to read in and analyze data from the IRIS solar-observing satellite.
long_description = file: README.rst
long_description_content_type = text/x-rst
gitlab_project = LMSAL_HUB/iris_hub/irispy-lmsal
platform = any
keywords = solar physics, solar, science, sun, wcs, coordinates
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
setup_requires = setuptools_scm
install_requires =
    sunraster>=0.4.0
    sunpy[all]>=3.1.0
    scipy>=1.7.0
    pandas>=1.3.3

[options.extras_require]
tests =
    pytest-astropy
docs =
    aiapy
    requests
    sphinx
    sphinx-automodapi
    sphinx-changelog
    sphinx-gallery
    sphinx-panels
    sunpy-sphinx-theme

[options.package_data]
irispy.data =  test/*, test/*/*
irispy = data/*

[tool:pytest]
testpaths = "irispy" "docs"
norecursedirs = "docs/_build" "docs/generated" ".history" "examples"
doctest_plus = enabled
doctest_optionflags = NORMALIZE_WHITESPACE FLOAT_CMP ELLIPSIS
text_file_format = rst
addopts = --doctest-rst --doctest-ignore-import-errors -p no:unraisableexception -p no:threadexception
remote_data_strict = True
filterwarnings =
    error
    # Do not fail on pytest config issues (i.e. missing plugins) but do show them
    always::pytest.PytestConfigWarning
    #
    # A list of warnings to ignore follows. If you add to this list, you MUST
    # add a comment or ideally a link to an issue that explains why the warning
    # is being ignored
    #
    #
    # This is due to dependencies building with a numpy version different from
    # the local installed numpy version, but should be fine
    # See https://github.com/numpy/numpy/issues/15748#issuecomment-598584838
    ignore:The distutils.sysconfig module is deprecated, use sysconfig instead
    ignore:numpy.ufunc size chaEged:RuntimeWarning
    ignore:numpy.ndarray size changed:RuntimeWarning
    ignore:invalid value encountered in sqrt:RuntimeWarning
    ignore::astropy.wcs.wcs.FITSFixedWarning
    ignore:ERFA function:erfa.core.ErfaWarning
    ignore:FLIP_TOP_BOTTOM is deprecated and will be removed in Pillow 10

[isort]
balanced_wrapping = True
default_section = THIRDPARTY
include_trailing_comma = True
known_sunraster = sunraster
known_first_party = irispy
length_sort = False
length_sort_sections=stdlib
line_length = 120
multi_line_output = 3
no_lines_before = LOCALFOLDER
sections = FUTURE, STDLIB, THIRDPARTY, SUNRASTER, FIRSTPARTY, LOCALFOLDER

[pycodestyle]
max_line_length = 120

[flake8]
max-line-length = 120
exclude =
    .git,
    __pycache__,
    docs/conf.py,
    build,
    irispy/data/sample.py,
    irispy/extern/**,
rst-directives =
    plot

[coverage:run]
omit =
  irispy/conftest.py
  irispy/*setup_package*
  irispy/tests/*
  irispy/*/tests/*
  irispy/extern/*
  irispy/version*
  */irispy/conftest.py
  */irispy/*setup_package*
  */irispy/tests/*
  */irispy/*/tests/*
  */irispy/extern/*
  */irispy/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
